[project]
name = "flask-fenrir"
version = "0.1.0"
description = "Drop-in Flask API for LLM agent access to SQLModel web apps"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{name = "Fenrir"}]
keywords = ["flask", "llm", "api", "sqlmodel", "sqlalchemy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Flask",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "flask>=3.0",
    "sqlalchemy>=2.0",
]

[project.urls]
Repository = "https://github.com/fenrir/fenrir-api"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["fenrir_api.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "sqlmodel>=0.0.22",
]
